--- a/client/port-ol-app/package.json
+++ b/client/port-ol-app/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.0",
+    "recharts": "^0.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
