--- a/client/port-ol-app/package.json
+++ b/client/port-ol-app/package.json
@@ -6,9 +6,12 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "muicss": "^0.9.4",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
-    "recharts": "^0.18.0"
+    "recharts": "^0.18.0",
+    "whatwg-fetch": "^2.0.1",
+    "isomorphic-fetch": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
