--- a/python/DO_settings.json
+++ b/python/DO_settings.json
@@ -1,9 +1,9 @@
 {
-    "common_path" : "/home/adri/hub/port-thc-x/",
+    "common_path" : "/home/yoda/port-thc-x/",
     "datafile": "data/sample_data_1.json",
     "max_outlier_percent": 33,
     "min_histogram_bins" : 3,
     "max_histogram_bins" :50,
 
-    "currency_list_file" : "data/currencies_for_test.json"
+    "currency_list_file" : "data/currencies_openexchange_1480071608.json"
 }
