--- a/client/port-ol-app/package.json
+++ b/client/port-ol-app/package.json
@@ -11,6 +11,7 @@
     "react": "^15.4.0",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.0",
+    "react-s-alert": "^1.2.1",
     "recharts": "^0.18.0",
     "whatwg-fetch": "^2.0.1"
   },
